src/test/deca/context/invalid/declaVariable-voidType.context
declaVariable-voidType.deca:2:
